
// ------------------------------------------------------------------------------------------------------------------
// This is auto generated code. Every manually change in this code will be overwritten at the next code generation! |
// ------------------------------------------------------------------------------------------------------------------
        
using DoofesZeug.Attributes;
using DoofesZeug.Attributes.Documentation;
using DoofesZeug.Attributes.Pattern;



namespace DoofesZeug.Models.Specieses.Human.Professions
{
    [Description("This is an specialized entitiy for an soldier.")]
    [Generated]
    [Builder]
    public class Soldier : Profession
    {
        public Soldier() : base(WellKnownProfession.Soldier)
        {
        }
    }
}
